--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,1 +1,8 @@
-<h1>Grams1</h1>
+<h1>Grams</h1>
+<% @grams.each do |gram| %>
+<div>
+  <%= image_tag gram.image %>
+  <br />
+  <%= gram.message %>
+</div>
+<% end %>
