--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Gram</h1>
 
 <%= simple_form_for @gram do |f| %>
+  <%= f.input :image %>
   <%= f.input :message %>
-  <%= f.submit :post %>
+  <%= f.submit "Post!" %>
 <% end %>
