--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,8 +1,38 @@
-<h1>Grams</h1>
-<% @grams.each do |gram| %>
-<div>
-  <%= image_tag gram.image %>
-  <br />
-  <%= gram.message %>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3">
+  <% @grams.each do |gram| %>
+  <div class="card">
+    <%= image_tag gram.image, class: 'image' %>
+    <p>
+      <%= gram.message %>
+    </p>
+    
+    <div class="gram-actions float-right">
+      <% if current_user && current_user == gram.user %>
+        <%= link_to 'Edit', edit_gram_path(gram) %>
+        <%= link_to 'Destroy', gram_path(gram), method: :delete, data: {confirm: "Are you sure?"} %>
+      <% end %>    
+    </div>
+    <div class= "comments">
+     <% if gram.comments.present? %>
+      <br class="clear-fix" />
+      <h3>Comments</h3>
+      <% gram.comments.each do |comment| %>
+        <div class="comment">
+          <span class="comment_handle">
+            <%= comment.user.email %>
+          </span>
+          <%= comment.message %>
+          </div>
+        <% end %>
+      <% end %>
+      <br />
+      <div class="add_comment">
+        <%= simple_form_for Comment.new, url: gram_comments_path(gram) do |f| %>
+          <%= f.input :message, label: "Add a  Comment" %>
+          <%= f.submit "Add Comment", class: 'my-btn' %>
+        <% end %>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
-<% end %>
