--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,7 +1,9 @@
-<h1>New Gram</h1>
+<div class="col-lg-10 offset-lg-1 col-sm-8 offset-sm-2 col-md-8 offset-md-2 card form">
 
 <%= simple_form_for @gram do |f| %>
   <%= f.input :image %>
   <%= f.input :message %>
-  <%= f.submit "Post!" %>
+  <%= f.submit "Post!", class: 'my-btn' %>
 <% end %>
+
+</div>
